--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,3 +1,37 @@
+footer button {
+	position: relative;
+	display: block;
+	cursor: pointer;
+	filter: drop-shadow(0 0 0 transparent);
+	transition: transform 0.4s ease;
+}
+
+footer button:hover:not(.active) {
+	transform: scale(1.4);
+	filter: drop-shadow(0 0 10px var(--color-red));
+}
+
+footer button::after {
+	content: "";
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	width: 100%;
+	height: 0%;
+	background-color: var(--color-red);
+	opacity: 0.25;
+	mix-blend-mode: multiply;
+	transform: translateY(100%);
+	transition: height 0.5s ease, opacity 0.4s ease, transform 0.5s ease;
+	z-index: 1;
+}
+
+/*footer button:hover::after {
+	height: 100%;
+	transform: translateY(0%);
+	opacity: 0.35;
+}*/
+
 footer button.active {
 	position: relative;
 }
