--- a/src/index.css
+++ b/src/index.css
@@ -31,3 +31,15 @@ button {
 	outline: none;
 	border: none;
 }
+
+.main-button {
+	position: relative;
+	border: 4px solid transparent;
+	transition: var(--transition);
+}
+
+.main-button:hover {
+	background-color: var(--color-white);
+	border: 4px solid var(--color-red);
+	color: var(--color-red);
+}
