--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@
 	--color-red: #fc2121;
 	--color-red-light: #fff3f3;
 	--font-color: #18171c;
-	--color-bg: #f7f9ef;
+	--color-bg: #fdfdfd;
 	--color-grey-light: #e6e6e6;
 	--color-white: #ffffff;
 	--transition: 0.4s all ease-in-out;
